[project]
name = "aseams"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Pigeon", email = "thomas.pigeon@ifpen.fr"},
    {name = "Hadrien Vroylandt", email = "hadrien.vroylandt@unicaen.fr"},
]
dependencies = [
    "ase",
    "numpy",
    "statsmodels",
    "scipy"
]
requires-python = ">=3.8"
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
