[metadata]
name = aseams
version = 0.1.0
description = Adaptive Multilevel Splitting (AMS) toolkit for sampling rare events in molecular simulations.
author = Your Name
author_email = thomas.pigeon@ifpen.fr
license = GPLv3
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/ams-pkg
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.22
    scipy>=1.8
    ase>=3.22

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    black
    flake8
    isort
    build

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    .eggs,
    *.egg-info
select = B,C,E,F,W,T4,B9

[isort]
profile = black
src_paths = src, tests
known_first_party = ams_pkg
default_section = THIRDPARTY
force_grid_wrap = 0
line_length = 88
multi_line_output = 3
include_trailing_comma = True

[tool:pytest]
minversion = 7.0
addopts = -ra -q
testpaths =
    tests

[coverage:run]
branch = True
source =
    src/ams_pkg
omit =
    tests/*

[coverage:report]
show_missing = True
skip_covered = True